--- a/ViewModels/ContentRate.ViewModels.csproj
+++ b/ViewModels/ContentRate.ViewModels.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ReactiveUI" Version="18.4.1" />
+    <PackageReference Include="ReactiveUI" Version="18.4.20" />
+    <PackageReference Include="ReactiveUI.Fody" Version="18.4.20" />
   </ItemGroup>
 
   <ItemGroup>
