--- a/Youtube.Extensions/Youtube.Extensions.csproj
+++ b/Youtube.Extensions/Youtube.Extensions.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ardalis.Result" Version="4.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ContentRate.Domain\ContentRate.Domain.csproj" />
+    <ProjectReference Include="..\ContentRate.Application\ContentRate.Application.csproj" />
   </ItemGroup>
 
 </Project>
