Added register page

--- a/ContentRate.GrpcService/appsettings.json
+++ b/ContentRate.GrpcService/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ServerUrl": "http://localhost:5000",
   "ConnectionStrings": {
     "PostgresConnection": "User ID=tester;Password=12345678;Server=localhost;Port=5432;Database=ContentRate;Integrated Security=true;Pooling=true"
   },
