--- a/ViewModels/ContentRate.ViewModels.csproj
+++ b/ViewModels/ContentRate.ViewModels.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="ReactiveUI" Version="18.4.20" />
     <PackageReference Include="ReactiveUI.Fody" Version="18.4.20" />
+    <PackageReference Include="ReactiveUI.Validation" Version="3.1.7" />
   </ItemGroup>
 
   <ItemGroup>
