--- a/ContentRate.BlazorServer/Client/ContentRate.BlazorServer.Client.csproj
+++ b/ContentRate.BlazorServer/Client/ContentRate.BlazorServer.Client.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
     <PackageReference Include="Grpc.Net.Client.Web" Version="2.51.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.3" PrivateAssets="all" />
