--- a/ViewModels/ContentRate.ViewModels.csproj
+++ b/ViewModels/ContentRate.ViewModels.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.5.1" />
     <PackageReference Include="ReactiveUI" Version="18.4.20" />
     <PackageReference Include="ReactiveUI.Fody" Version="18.4.20" />
-    <PackageReference Include="ReactiveUI.Validation" Version="3.1.7" />
   </ItemGroup>
 
   <ItemGroup>
